# porquinho

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
crates/nu-table/: Cargo.toml
crates/nu-table/src/: main.rs  table.rs
src/: bookkeeper.rs  cli.rs  dirs.rs  error.rs  file.rs  main.rs  parser.rs  reader.rs  utils.rs  writer.rs
src/bookkeeper/: mod.rs  status.rs
