[workspace]
members = [
    ".",
    "crates/nu-table",
]

[package]
name = "porquinho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.4", features = ["derive", "env"] }
fs-err = "2.7.0"
chrono = "0.4.19"
thiserror = "1.0.30"
bigdecimal = "0.3.0"
directories = "4.0.1"
fixed-buffer = "0.3.1"
toml = "0.5.8"
nu-table = { path = "crates/nu-table" }
nu-ansi-term = "0.42.0"


[dev-dependencies]
tempfile = "3.3.0"
